--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@prisma/client": "^5.13.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "or": "^0.2.0",
     "prisma": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
