--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.15",
     "@prisma/client": "^5.13.0",
     "@reduxjs/toolkit": "^2.2.3",
